--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-3 offset-md-2  jl-display-text">
                         <h1>Olá!</h1>
-                        <p>Meu nome é <span>Natan Falconi</span>. Lorem Cum dicta doloremque modi eligendi ex inventore! Vero modi nisi culpa dignissimos.</p>
+                        <p>Meu nome é <span>John Lemon</span>. Lorem Cum dicta doloremque modi eligendi ex inventore! Vero modi nisi culpa dignissimos.</p>
 
+                        <button href="" class="jl-btn jl-btn-large">Solicite um orçamento</button>
                     </div>
                 </div> 
             </div>
