--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
             <p>Aguarde um pouquinho. Estamos viajando pelo espaço</p>
         </div>
     </div>
+
+    <div class="jl-overlay"></div>
+
+    <div class="jl-modal">
+        <div class="jl-modal-header">
+            <h1>Solicite um Orçamento</h1>
+
+            <button class="jl-close-modal">
+                X
+            </button>
+        </div>
+
+        <div class="jl-modal-body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, facilis.</p>
+
+            <form class="jl-form">
+                <input type="text" name="nome" id="jl-nome" class="jl-field">
+            </form>
+        </div>
+    </div>
     
     <header class="jl-topbar">
         <div class="jl-logo">
