modal/header/body

--- a/index.html
+++ b/index.html
@@ -32,11 +32,45 @@
         </div>
 
         <div class="jl-modal-body">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, facilis.</p>
+            <div class="row">
+                <div class="col-sm-12">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, facilis.</p>
+                </div>
+            </div>
 
-            <form class="jl-form">
-                <input type="text" name="nome" id="jl-nome" class="jl-field">
-            </form>
+            <div class="row jl-mar-top-15">
+                <div class="col-sm-12">
+                    <form class="jl-form">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6">
+                                <label for="nome">Nome</label>
+                                <input type="text" name="nome" id="jl-nome" class="jl-field">
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="jl-email" class="jl-field">
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="telefone">Telefone</label>
+                                <input type="tel" name="telefone" id="jl-telefone" class="jl-field">
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <label for="site">Site</label>
+                                <input type="text" name="site" id="jl-site" class="jl-field">
+                            </div>
+                            <div class="col-sm-12 col-md-12">
+                                <label for="descricao">Descreva abaixo um pouco sobre o projeto que deseja</label>
+                                <textarea name="descricao" rows="8" id="jl-descricao" class="jl-textarea"></textarea>
+                            </div>
+                        </div>
+                        <div class="row justify-content-end">
+                            <div class="col-sm-12 col-md-6">
+                                <button class="jl-btn jl-btn-large jl-btn-green jl-btn-block">Enviar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
