funcionalidade open/close modal(toggle)

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </div>
     </div>
 
-    <div class="jl-overlay"></div>
+    <div class="jl-overlay jl-toggle-modal"></div>
 
-    <div class="jl-modal">
+    <div class="jl-modal" id="jl-modal-orcamento">
         <div class="jl-modal-header">
             <h1>Solicite um Orçamento</h1>
 
-            <button class="jl-close-modal">
+            <button class="jl-close-modal jl-toggle-modal">
                 X
             </button>
         </div>
@@ -122,7 +122,7 @@
                         <h1>Olá!</h1>
                         <p>Meu nome é <span>John Lemon</span>. Lorem Cum dicta doloremque modi eligendi ex inventore! Vero modi nisi culpa dignissimos.</p>
 
-                        <button href="" class="jl-btn jl-btn-large">Solicite um orçamento</button>
+                        <button href="" class="jl-btn jl-btn-large jl-toggle-modal">Solicite um orçamento</button>
                     </div>
                 </div> 
             </div>
