fist part of the sidebar - Page Portfólio

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <nav class="jl-menu">
             <a href="#">Home</a>
-            <a href="#">Projetos</a>
+            <a href="#">Portfólio</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
@@ -134,13 +134,34 @@
             </div>
         </section>  
 
-        <section class="jl-full-height">
-    
-        </section>  
+        <section class="jl-full-height" id="jl-home-portfolio">
+            <div class="container-fluid jl-no-padding">
+                <div class="row">
+                    <div class="col-sm-2">
+                        <div class="jl-portfolio-navigator">
+                            <div class="jl-item-counter">
+                                <span>01</span>
+                            </div>
+                            <nav class="jl-item-navigator">
+                                <a href="#" class="jl-item-active"></a>
+                                <a href="#"></a>
+                                <a href="#"></a>
+                                <a href="#"></a>
+                                <a href="#"></a>
+                            </nav>
+                            <div class="jl-portifolio-next-prev">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 
 
     <script src="https://kit.fontawesome.com/768e5eb1d6.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js" integrity="sha512-Q4MHJkk3u8P63v1aX0I7jvo5AoMFi53HbxUBhURp8x7xrqD+nsHZrbBEQVObpqE+MAAVB/Ye9ZlKkM44a1q9WA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.min.js" integrity="sha512-g6IhMPPqSSUgE+lYgBpdsXICK0fNhDlDDEuIbphNIKfPTYFD/1VcnxA+7pS9mibvzIb5SB0nNvii5M+yMwkcJA==" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
