side menu position

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="row">
                     <div class="col-sm-2">
                         <div class="jl-portfolio-navigator">
-                            <div class="jl-item-counter">
+                            <div class="jl-navigator-counter">
                                 <span>01</span>
                             </div>
                             <nav class="jl-item-navigator">
@@ -149,8 +149,18 @@
                                 <a href="#"></a>
                                 <a href="#"></a>
                             </nav>
-                            <div class="jl-portifolio-next-prev">
+                            <div class="jl-next-prev">
+                                <div class="jl-item-prev">
+                                    <i class="fas fa-caret-left"></i>
+                                </div>
 
+                                <div class="jl-items-counter">
+                                    <span>01</span>/<span>05</span>
+                                </div>
+
+                                <div class="jl-item-next">
+                                    <i class="fas fa-caret-right"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
