--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 <a href="#"></a>
                                 <a href="#"></a>
                             </nav>
-                            <div class="jl-next-prev">
+                            <div class="jl-next-prev jl-no-radios-left">
                                 <div class="jl-item-prev">
                                     <i class="fas fa-caret-left"></i>
                                 </div>
@@ -164,14 +164,38 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-sm-10">
+                        <div class="jl-slider-container jl-full-height">
+                            <ul class="jl-slider-list">
+                                <li class="jl-slider-item red">
+                                    
+                                </li>
+                                <li class="jl-slider-item yellow">
+
+                                </li>
+                                <li class="jl-slider-item blue">
+
+                                </li>
+                                <li class="jl-slider-item purple">
+
+                                </li>
+                                <li class="jl-slider-item green">
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
     </div>
 
-
     <script src="https://kit.fontawesome.com/768e5eb1d6.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js" integrity="sha512-Q4MHJkk3u8P63v1aX0I7jvo5AoMFi53HbxUBhURp8x7xrqD+nsHZrbBEQVObpqE+MAAVB/Ye9ZlKkM44a1q9WA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.min.js" integrity="sha512-g6IhMPPqSSUgE+lYgBpdsXICK0fNhDlDDEuIbphNIKfPTYFD/1VcnxA+7pS9mibvzIb5SB0nNvii5M+yMwkcJA==" crossorigin="anonymous"></script>
+    <script src="js/anime.min.js"></script>
+    <script src="js/slider.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 </html>
