--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
                     <div class="col-sm-2">
                         <div class="jl-portfolio-navigator">
                             <div class="jl-navigator-counter">
-                                <span>01</span>
+                                <span class="jl-number-slide">01</span>
                             </div>
                             <nav class="jl-item-navigator">
-                                <a href="#" class="jl-item-active"></a>
-                                <a href="#"></a>
-                                <a href="#"></a>
-                                <a href="#"></a>
-                                <a href="#"></a>
+                                <a href="#" class="jl-item-active" data-nav="1"></a>
+                                <a href="#" data-nav="2"></a>
+                                <a href="#" data-nav="3"></a>
+                                <a href="#" data-nav="4"></a>
+                                <a href="#" data-nav="5"></a>
                             </nav>
                             <div class="jl-next-prev jl-no-radios-left">
                                 <div class="jl-item-prev">
@@ -155,7 +155,9 @@
                                 </div>
 
                                 <div class="jl-items-counter">
-                                    <span>01</span>/<span>05</span>
+                                    <span class="jl-current-slide">01</span>
+                                    /
+                                    <span class="jl-total-slide">05</span>
                                 </div>
 
                                 <div class="jl-item-next">
