--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 col-md-3 offset-md-2  jl-display-text">
-                        <h1>Olá!</h1>
+                        <h1 class='jl-title-xlarge jl-title-color'>Olá!</h1>
                         <p>Meu nome é <span>John Lemon</span>. Lorem Cum dicta doloremque modi eligendi ex inventore! Vero modi nisi culpa dignissimos.</p>
 
                         <button href="" class="jl-btn jl-btn-large jl-toggle-modal">Solicite um orçamento</button>
@@ -169,20 +169,28 @@
 
                     <div class="col-sm-10">
                         <div class="jl-slider-container jl-full-height">
-                            <ul class="jl-slider-list">
-                                <li class="jl-slider-item red">
-                                    
+                            <ul class="jl-slider-list jl-full-height">
+                                <li class="jl-slider-item">
+                                    <div class="row">
+                                        <div class="col-sm-5">
+                                            <div class="jl-portfolio-item-info">
+                                                <h1 class="jl-title-large">Startup Rocketz Website</h1>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, ut!</p>
+                                                <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
-                                <li class="jl-slider-item yellow">
+                                <li class="jl-slider-item">
 
                                 </li>
-                                <li class="jl-slider-item blue">
+                                <li class="jl-slider-item">
 
                                 </li>
-                                <li class="jl-slider-item purple">
+                                <li class="jl-slider-item">
 
                                 </li>
-                                <li class="jl-slider-item green">
+                                <li class="jl-slider-item">
 
                                 </li>
                             </ul>
