--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
                                                 <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
                                             </div>
                                         </div>
+
+                                        <div class="col-sm-7">
+                                            <div class="jl-portfolio-item-thumb">
+                                                <img src="img/thumb-1.jpg" alt="Startup Rocket">
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                                 <li class="jl-slider-item">
