--- a/index.html
+++ b/index.html
@@ -169,18 +169,19 @@
 
                     <div class="col-sm-10">
                         <div class="jl-slider-container jl-full-height">
-                            <ul class="jl-slider-list jl-full-height">
+                            <ul class="jl-slider-list">
                                 <li class="jl-slider-item">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
+
                                                 <h1 class="jl-title-large">Startup Rocketz Website</h1>
-                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, ut!</p>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
                                                 <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
                                             </div>
                                         </div>
 
-                                        <div class="col-sm-7">
+                                        <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
                                                 <img src="img/thumb-1.jpg" alt="Startup Rocket">
                                             </div>
@@ -188,22 +189,79 @@
                                     </div>
                                 </li>
                                 <li class="jl-slider-item">
+                                    <div class="row">
+                                        <div class="col-sm-5">
+                                            <div class="jl-portfolio-item-info">
+                                                <h1 class="jl-title-large">Startup Rocketz Website</h1>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
+                                                <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
+                                            </div>
+                                        </div>
 
+                                        <div class="col-sm-6">
+                                            <div class="jl-portfolio-item-thumb">
+                                                <img src="img/thumb-2.jpg" alt="Startup Rocket">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="jl-slider-item">
+                                    <div class="row">
+                                        <div class="col-sm-5">
+                                            <div class="jl-portfolio-item-info">
+                                                <h1 class="jl-title-large">Startup Rocketz Website</h1>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
+                                                <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
+                                            </div>
+                                        </div>
 
+                                        <div class="col-sm-6">
+                                            <div class="jl-portfolio-item-thumb">
+                                                <img src="img/thumb-3.jpg" alt="Startup Rocket">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                                 <li class="jl-slider-item">
+                                    <div class="row">
+                                        <div class="col-sm-5">
+                                            <div class="jl-portfolio-item-info">
+                                                <h1 class="jl-title-large">Startup Rocketz Website</h1>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
+                                                <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
+                                            </div>
+                                        </div>
 
+                                        <div class="col-sm-6">
+                                            <div class="jl-portfolio-item-thumb">
+                                                <img src="img/thumb-4.jpg" alt="Startup Rocket">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
-                                <li class="jl-slider-item">
+                                 <li class="jl-slider-item">
+                                    <div class="row">
+                                        <div class="col-sm-5">
+                                            <div class="jl-portfolio-item-info">
+                                                <h1 class="jl-title-large">Startup Rocketz Website</h1>
+                                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
+                                                <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
+                                            </div>
+                                        </div>
 
+                                        <div class="col-sm-6">
+                                            <div class="jl-portfolio-item-thumb">
+                                                <img src="img/thumb-5.jpg" alt="Startup Rocket">
+                                            </div>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
     </div>
 
     <script src="https://kit.fontawesome.com/768e5eb1d6.js" crossorigin="anonymous"></script>
