--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                     <div class="col-sm-10">
                         <div class="jl-slider-container jl-full-height">
                             <ul class="jl-slider-list">
-                                <li class="jl-slider-item">
+                                <li class="jl-slider-item jl-slide-active" data-slide="1">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
-
+                                                <div class="jl-portfolio-box"></div>
                                                 <h1 class="jl-title-large">Startup Rocketz Website</h1>
                                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
                                                 <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
@@ -188,7 +188,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item">
+                                <li class="jl-slider-item" data-slide="2">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -205,7 +205,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item">
+                                <li class="jl-slider-item" data-slide="3">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -222,7 +222,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item">
+                                <li class="jl-slider-item" data-slide="4">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -239,7 +239,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                 <li class="jl-slider-item">
+                                 <li class="jl-slider-item" data-slide="5">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
