--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                                 <li class="jl-slider-item jl-slide-active" data-slide="1">
                                     <div class="row">
                                         <div class="col-sm-5">
-                                            <div class="jl-portfolio-item-info">
-                                                <div class="jl-portfolio-box"></div>
+                                            <div class="jl-portfolio-item-info jl-fade-from-left">
                                                 <h1 class="jl-title-large">Startup Rocketz Website</h1>
                                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Ipsa, ut!</p>
                                                 <button class="jl-btn jl-btn-large jl-btn-green">Ver Projeto</button>
@@ -183,7 +182,8 @@
 
                                         <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
-                                                <img src="img/thumb-1.jpg" alt="Startup Rocket">
+                                                <div class="jl-portfolio-box jl-scale-right"></div>
+                                                <img src="img/thumb-1.jpg" alt="Startup Rocket" class="jl-scale-up">
                                             </div>
                                         </div>
                                     </div>
@@ -200,6 +200,7 @@
 
                                         <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
+                                                <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-2.jpg" alt="Startup Rocket">
                                             </div>
                                         </div>
@@ -217,6 +218,7 @@
 
                                         <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
+                                                <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-3.jpg" alt="Startup Rocket">
                                             </div>
                                         </div>
@@ -234,6 +236,7 @@
 
                                         <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
+                                                <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-4.jpg" alt="Startup Rocket">
                                             </div>
                                         </div>
@@ -251,6 +254,7 @@
 
                                         <div class="col-sm-6">
                                             <div class="jl-portfolio-item-thumb">
+                                                <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-5.jpg" alt="Startup Rocket">
                                             </div>
                                         </div>
