--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                                             <div class="jl-portfolio-item-thumb">
                                                 <div class="jl-portfolio-box jl-scale-right"></div>
                                                 <img src="img/thumb-1.jpg" alt="Startup Rocket" class="jl-scale-up">
+                                                <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                             </div>
                                         </div>
                                     </div>
@@ -202,6 +203,7 @@
                                             <div class="jl-portfolio-item-thumb">
                                                 <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-2.jpg" alt="Startup Rocket">
+                                                <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                             </div>
                                         </div>
                                     </div>
@@ -220,6 +222,7 @@
                                             <div class="jl-portfolio-item-thumb">
                                                 <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-3.jpg" alt="Startup Rocket">
+                                                <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                             </div>
                                         </div>
                                     </div>
@@ -238,6 +241,7 @@
                                             <div class="jl-portfolio-item-thumb">
                                                 <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-4.jpg" alt="Startup Rocket">
+                                                <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                             </div>
                                         </div>
                                     </div>
@@ -256,6 +260,7 @@
                                             <div class="jl-portfolio-item-thumb">
                                                 <div class="jl-portfolio-box"></div>
                                                 <img src="img/thumb-5.jpg" alt="Startup Rocket">
+                                                <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                             </div>
                                         </div>
                                     </div>
@@ -268,6 +273,7 @@
         </section>
     </div>
 
+    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/768e5eb1d6.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js" integrity="sha512-Q4MHJkk3u8P63v1aX0I7jvo5AoMFi53HbxUBhURp8x7xrqD+nsHZrbBEQVObpqE+MAAVB/Ye9ZlKkM44a1q9WA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.min.js" integrity="sha512-g6IhMPPqSSUgE+lYgBpdsXICK0fNhDlDDEuIbphNIKfPTYFD/1VcnxA+7pS9mibvzIb5SB0nNvii5M+yMwkcJA==" crossorigin="anonymous"></script>
