--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <nav class="jl-menu">
             <a href="#">Home</a>
-            <a href="#">Portfólio</a>
+            <a href="portfolio.html">Portfólio</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
