--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <nav class="jl-menu">
             <a href="#">Home</a>
-            <a href="portfolio.html">Portfólio</a>
+            <a href="pages/portfolio.html">Portfólio</a>
             <a href="#">Sobre</a>
         </nav>
     </header>
@@ -170,7 +170,7 @@
                     <div class="col-sm-10">
                         <div class="jl-slider-container jl-full-height">
                             <ul class="jl-slider-list">
-                                <li class="jl-slider-item jl-slide-active" data-slide="1">
+                                <li class="jl-portfolio-item jl-slide-active" data-slide="1">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info jl-fade-from-left">
@@ -189,7 +189,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item" data-slide="2">
+                                <li class="jl-portfolio-item" data-slide="2">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -208,7 +208,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item" data-slide="3">
+                                <li class="jl-portfolio-item" data-slide="3">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -227,7 +227,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="jl-slider-item" data-slide="4">
+                                <li class="jl-portfolio-item" data-slide="4">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
@@ -246,7 +246,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                 <li class="jl-slider-item" data-slide="5">
+                                 <li class="jl-portfolio-item" data-slide="5">
                                     <div class="row">
                                         <div class="col-sm-5">
                                             <div class="jl-portfolio-item-info">
