--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:ital,wght@0,400;0,700;0,800;1,600;1,700;1,800&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="../css/bootstrap-grid.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
@@ -77,8 +78,8 @@
 
                                 <div class="col-sm-6">
                                     <div class="jl-portfolio-item-thumb">
-                                        <div class="jl-portfolio-box"></div>
-                                        <img src="../img/thumb-1.jpg" alt="Startup Rocket">
+                                        <div class="jl-portfolio-box" data-aos="zoom-in"></div>
+                                        <img src="../img/thumb-1.jpg" alt="Startup Rocket" data-aos="flip-left" data-aos-offset="300">
                                         <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                     </div>
                                 </div>
@@ -96,8 +97,8 @@
 
                                 <div class="col-sm-6">
                                     <div class="jl-portfolio-item-thumb">
-                                        <div class="jl-portfolio-box"></div>
-                                        <img src="../img/thumb-2.jpg" alt="Startup Rocket">
+                                        <div class="jl-portfolio-box" data-aos="zoom-in"></div>
+                                        <img src="../img/thumb-2.jpg" alt="Startup Rocket" data-aos="flip-left" data-aos-offset="300">
                                         <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                     </div>
                                 </div>
@@ -115,8 +116,8 @@
 
                                 <div class="col-sm-6">
                                     <div class="jl-portfolio-item-thumb">
-                                        <div class="jl-portfolio-box"></div>
-                                        <img src="../img/thumb-3.jpg" alt="Startup Rocket">
+                                        <div class="jl-portfolio-box" data-aos="zoom-in"></div>
+                                        <img src="../img/thumb-3.jpg" alt="Startup Rocket" data-aos="flip-left" data-aos-offset="300">
                                         <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                     </div>
                                 </div>
@@ -134,8 +135,8 @@
 
                                 <div class="col-sm-6">
                                     <div class="jl-portfolio-item-thumb">
-                                        <div class="jl-portfolio-box"></div>
-                                        <img src="../img/thumb-4.jpg" alt="Startup Rocket">
+                                        <div class="jl-portfolio-box" data-aos="zoom-in"></div>
+                                        <img src="../img/thumb-4.jpg" alt="Startup Rocket" data-aos="flip-left" data-aos-offset="300">
                                         <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                     </div>
                                 </div>
@@ -153,8 +154,8 @@
 
                                 <div class="col-sm-6">
                                     <div class="jl-portfolio-item-thumb">
-                                        <div class="jl-portfolio-box"></div>
-                                        <img src="../img/thumb-5.jpg" alt="Startup Rocket">
+                                        <div class="jl-portfolio-box" data-aos="zoom-in"></div>
+                                        <img src="../img/thumb-5.jpg" alt="Startup Rocket" data-aos="flip-left" data-aos-offset="300">
                                         <button class="jl-btn jl-btn-medium jl-btn-dark">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
                                     </div>
                                 </div>
@@ -166,13 +167,14 @@
         </section>
     </div>
     
-
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <script src="https://kit.fontawesome.com/768e5eb1d6.js" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.js" integrity="sha512-Q4MHJkk3u8P63v1aX0I7jvo5AoMFi53HbxUBhURp8x7xrqD+nsHZrbBEQVObpqE+MAAVB/Ye9ZlKkM44a1q9WA==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/inview.min.js" integrity="sha512-g6IhMPPqSSUgE+lYgBpdsXICK0fNhDlDDEuIbphNIKfPTYFD/1VcnxA+7pS9mibvzIb5SB0nNvii5M+yMwkcJA==" crossorigin="anonymous"></script>
-    <script src="../js/anime.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="../js/main.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 </html>
