--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -31,7 +31,7 @@
         <nav class="jl-menu">
             <a href="../index.html">Home</a>
             <a href="#">Portfólio</a>
-            <a href="#">Sobre</a>
+            <a href="sobre.html">Sobre</a>
         </nav>
     </header>
 
