--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -54,9 +54,9 @@
                 </div>
             </div>
 
-            <div class="jl-corner">
+            <!-- <div class="jl-corner">
 
-            </div>
+            </div> -->
         </div>
 
         <button class="jl-btn-contact"></button>
@@ -66,13 +66,26 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm-4">
-                            
+                            <img src="../img/joao-lemon-designer-sobre.png" alt="Joao Lemom">
                         </div>
 
-                        <div class="col-sm-5">
+                        <div class="col-sm-8">
                             <div class="row">
-                                <div class="col-sm-8"></div>
-                                <div class="col-sm-4"></div>
+                                <div class="col-sm-12 jl-mar-bottom-30">
+                                    <h1 class="jl-title jl-title-xlarge">João <spam class="jl-text-green">Lemon</spam></h1>
+                                </div>
+                                <div class="col-sm-7 jl-text-ligth">
+                                    <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Um pouco sobre mim</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet ratione assumenda cupiditate. Eligendi nihil alias expedita consequatur vitae ullam beatae distinctio molestias inventore totam sunt voluptatum, porro quasi assumenda laboriosam cumque nulla tempore impedit! At labore odit culpa veritatis!</p>
+                                </div>
+                                <div class="col-sm-5">
+                                    <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Premios e reconhecimentos</h4>
+                                    <ul class="jl-text-ligth">
+                                        <li>Lorem ipsum dolor sit amet.</li>
+                                        <li>Lorem ipsum dolor sit amet.</li>
+                                        <li>Lorem ipsum dolor sit amet.</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
