--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -65,14 +65,16 @@
             <section class="jl-section-offset-top">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-sm-4">
-                            <img src="../img/joao-lemon-designer-sobre.png" alt="Joao Lemom">
+                        <div class="col-sm-4" id="jl-avatar-sobre">
+                            <div class="jl-box-img">
+                                <img class="jl-img"src="../img/joao-lemon-designer-sobre.png" alt="Joao Lemom">
+                            </div>
                         </div>
 
-                        <div class="col-sm-8">
+                        <div class="col-sm-7">
                             <div class="row">
                                 <div class="col-sm-12 jl-mar-bottom-30">
-                                    <h1 class="jl-title jl-title-xlarge">João <spam class="jl-text-green">Lemon</spam></h1>
+                                    <h1 class="jl-title jl-text-ligth jl-title-xlarge">João <spam class="jl-text-green">Lemon</spam></h1>
                                 </div>
                                 <div class="col-sm-7 jl-text-ligth">
                                     <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Um pouco sobre mim</h4>
@@ -80,7 +82,7 @@
                                 </div>
                                 <div class="col-sm-5">
                                     <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Premios e reconhecimentos</h4>
-                                    <ul class="jl-text-ligth">
+                                    <ul class="jl-text-ligth jl-page-list">
                                         <li>Lorem ipsum dolor sit amet.</li>
                                         <li>Lorem ipsum dolor sit amet.</li>
                                         <li>Lorem ipsum dolor sit amet.</li>
