--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -79,6 +79,23 @@
                                 <div class="col-sm-7 jl-text-ligth">
                                     <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Um pouco sobre mim</h4>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit amet ratione assumenda cupiditate. Eligendi nihil alias expedita consequatur vitae ullam beatae distinctio molestias inventore totam sunt voluptatum, porro quasi assumenda laboriosam cumque nulla tempore impedit! At labore odit culpa veritatis!</p>
+
+                                    <div class="jl-contact-info-inner jl-mar-top-30">                            
+                                        <div class="jl-social-links">
+                                            <a href="https://www.linkedin.com/in/natan-falconi/" target="_blank">
+                                                <i class="fab fa-linkedin"></i>
+                                            </a>
+                                            <a href="https://twitter.com/NatanFalconi" target="_blank">
+                                                <i class="fab fa-twitter"></i>
+                                            </a>
+                                            <a href="https://www.instagram.com/natanfalconi/" target="_blank">
+                                                <i class="fab fa-instagram"></i>
+                                            </a>
+                                        </div>
+
+                                        <p>hello@natan.com.br</p>
+                                        <p>+55 (27) 99663-8245</p>
+                                    </div>
                                 </div>
                                 <div class="col-sm-5">
                                     <h4 class="jl-subtitle jl-text-green jl-mar-bottom-15">Premios e reconhecimentos</h4>
