--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -54,9 +54,9 @@
                 </div>
             </div>
 
-            <!-- <div class="jl-corner">
+            <div class="jl-corner">
 
-            </div> -->
+            </div>
         </div>
 
         <button class="jl-btn-contact"></button>
