--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -93,7 +93,7 @@
                                             </a>
                                         </div>
 
-                                        <p>hello@natan.com.br</p>
+                                        <p class="jl-mar-top-15 jl-mar-bottom-15">hello@<span class="jl-text-green">natan</span>.com.br</p>
                                         <p>+55 (27) 99663-8245</p>
                                     </div>
                                 </div>
