--- a/pages/portfolio/maneger-it.html
+++ b/pages/portfolio/maneger-it.html
@@ -63,7 +63,9 @@
 
         <div class="jl-page-wrapper">
             <div class="container-fluid jl-hero">
+                <div class="container jl-pad-30">
 
+                </div>
             </div>
         </div>
 
