--- a/pages/portfolio/maneger-it.html
+++ b/pages/portfolio/maneger-it.html
@@ -63,8 +63,22 @@
 
         <div class="jl-page-wrapper">
             <div class="container-fluid jl-hero">
-                <div class="container jl-pad-30">
-
+                <div class="container">
+                    <div class="row  jl-text-ligth">
+                        <div class="col-sm-12">
+                            <h1 class="jl-tittle ">Maneger It! Aplicativo Mobile</h1>
+                        </div>
+                        <div class="col-sm-3">
+                            <p><span class="jl-text-green">Projeto: </span>ipsum dolor sit amet.</p>                          
+                            <p><span class="jl-text-green">Cliente: </span>ipsum dolor sit amet.</p>                          
+                            <p><span class="jl-text-green">Serviços: </span>ipsum dolor sit amet.</p>
+                            <button class="jl-btn jl-btn-medium jl-btn-green jl-mar-top-15">Visite o site <ion-icon name="arrow-redo-outline"></ion-icon></button>
+                        </div>
+                        <div class="col-sm-9">
+                            <p>Lorem ipsum <span class="jl-text-green">Manege It: </span>sit amet consectetur, adipisicing elit. Ipsum explicabo quibusdam tenetur quam esse expedita atque suscipit ea. Repellendus voluptate blanditiis a deleniti necessitatibus alias dicta cum labore perferendis nostrum.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, adipisci blanditiis earum corporis aut qui nihil totam consequuntur. Ullam, harum.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
